--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
-  "source": "src/index.tsx",
+  "source": "src/index.ts",
   "engines": {
     "node": ">=10"
   },
@@ -70,8 +70,5 @@
   },
   "files": [
     "dist"
-  ],
-  "dependencies": {
-    "fscreen": "^1.0.2"
-  }
+  ]
 }
